# Speech-to-Text-Api

./: .gitattributes  .gitignore  README.md  api.py  convert_audio.py  db.py  docker-compose.yml  emotion_detection.py  hypothesis_fixer.py  kafka_consumer.py  kafka_producer.py  main.py  post_processor.py  pyproject.toml  requirements.txt  save_to_elastic.py  save_to_mongo.py  settings.json  text_summarizer.py
.github/workflows/: ci.yml
engines/: parakeet_engine.py  transcription_worker.py  whisperx_engine.py  whisperx_nemo.py
services/: speaker_service.py  storage_service.py  transcription_service.py
static/: style.css
templates/: index.html
tests/: check_connection.py  check_converted.py  kafka_producer_test.py  test_all_connections.py  test_connection.py  test_diarization.py  test_emotion.py  test_transcribe.py
tests/unit/: test_hypothesis_fixer.py  test_post_processor.py
